[BUGFIX #122] Fix for banner component - system alerts is not responsive

--- a/packages/banner/addon/styles/components/_nucleus-banner-item.scss
+++ b/packages/banner/addon/styles/components/_nucleus-banner-item.scss
@@ -34,6 +34,11 @@
     top: 8px;
     right: 16px;
   }
+
+  &__content {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .nucleus-banner--mini {
